WebCore/dom/Document.h
@@ -197,6 +197,9 @@ public:
 
     void setCharset(const String&);
 
+    String contentLanguage() const { return m_contentLanguage; }
+    void setContentLanguage(const String& lang) { m_contentLanguage = lang; }
+
     String xmlEncoding() const { return m_xmlEncoding; }
     String xmlVersion() const { return m_xmlVersion; }
     bool xmlStandalone() const { return m_xmlStandalone; }
@@ -807,6 +810,8 @@ private:
     String m_xmlEncoding;
     String m_xmlVersion;
     bool m_xmlStandalone;
+
+    String m_contentLanguage;
 
 public:
     bool inPageCache();
